# wan-local-suite

./: .env  .env.template  .gitignore  .gitmodules  AGENTS.md  Makefile
backend/: README.md  pyproject.toml
backend/app/: config.py  infer.py  main.py
backend/app/routers/: animate.py
backend/app/schemas/: animate.py
backend/app/services/: animate_service.py
examples/preprocess_demo/: README.md  animate_job.yaml  replace_job.yaml
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx
sam2_configs/: __init__.py
scripts/: compress_wan22_df11.py  download_wan_model.py  preprocess.sh  preprocess_job.py  serve_multigpu.py  torchrun_animate.sh
