[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.9",
    "imageio[ffmpeg]>=2.34.0",
    "numpy>=1.26.0",
    "modelscope>=1.13.3",
    "easydict>=1.10",
    "einops>=0.7.0",
    "opencv-python-headless>=4.9.0.80",
    "decord>=0.6.0",
    "tqdm>=4.66.0",
    "peft>=0.11.1",
    "diffusers>=0.29.0",
    "sentencepiece>=0.2.0",
]
