[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.9",
    "imageio[ffmpeg]>=2.34.0",
    "numpy>=1.26.0",
    "modelscope>=1.13.3",
    "easydict>=1.10",
    "einops>=0.7.0",
    "opencv-python-headless>=4.9.0.80",
    "decord>=0.6.0",
    "tqdm>=4.66.0",
    "peft>=0.11.1",
    "diffusers>=0.29.0",
    "sentencepiece>=0.2.0",
    "pyyaml>=6.0",
    "loguru>=0.7.2",
    "moviepy>=1.0.3",
    "onnxruntime-gpu>=1.17.0",
    "matplotlib>=3.9.0",
    "sam-2 @ git+https://github.com/facebookresearch/sam2.git@0e78a118995e66bb27d78518c4bd9a3e95b4e266",
    "ftfy>=6.2.0",
    "librosa>=0.10.2",
    "dfloat11[cuda12]>=0.5.0",
]
